2005-02-15  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (gdb-find-file-unhook): New variable.
	(gdb-set-gud-minor-mode, gdb-set-gud-minor-mode-1)
	(gdb-set-gud-minor-mode-existing-buffers): New functions.
	(gdb-find-file-hook): New hook. Add it to find-file-hook.
	(gdb-info-breakpoints-custom, gdb-source-info): Simplify.

2005-02-14  Luc Teirlinck  <teirllm@auburn.edu>

	* cus-start.el (all): Comment change.

2005-02-14  Lute Kamstra  <lute@gnu.org>

	* cus-start.el (all): Check if symbol is void.

2005-02-14  Carsten Dominik  <dominik@science.uva.nl>

	* textmodes/reftex-cite.el (reftex-do-citation): Cleanup single
	optional argument to \cite.

2005-02-14  Richard M. Stallman  <rms@gnu.org>

	* cus-edit.el (custom-buffer-create-internal): Update help message.
	(custom-magic-alist): Update help messages.

	* cus-start.el (all): Allow a var to specify a standard value.

2005-02-12  Luc Teirlinck  <teirllm@auburn.edu>

	* custom.el (custom-theme-set-variables): Handle variable aliases.

	* frame.el (blink-cursor-timer): Doc fix.
	(blink-cursor): Make it an alias for `blink-cursor-mode' and
	declare obsolete.
	(blink-cursor-mode): Define with defcustom and use correct
	standard expression in that defcustom.
	* startup.el (command-line): Adapt to above changes in frame.el.

2005-02-11  Lute Kamstra  <lute@gnu.org>

	* apropos.el (apropos-score-doc): Prevent division by zero.

2005-02-11  Ulf Jasper  <ulf.jasper@web.de>

	* calendar/icalendar.el (icalendar--get-event-property): Doc fix.
	(icalendar--get-event-property-attributes)
	(icalendar--get-event-properties)
	(icalendar--datetime-to-diary-date): New functions.
	(icalendar--split-value): Doc fix.
	(icalendar--datetime-to-noneuropean-date)
	(icalendar--datetime-to-european-date): New optional argument
	SEPARATOR.  Return result as a string instead of a list.
	(icalendar--get-weekday-number): Check if ABBREVWEEKDAY is nil.
	(icalendar--convert-string-for-export): Rename arg S to STRING.